Completamento delle classi protocollo